tests/error/struct_errors/invalid_instantiate2.err
Error: Too many type arguments (at $FILE:17:11)
   | 
15 | 
16 | @guppy(module)
17 | def foo(s: MyStruct[int, bool]) -> None:
   |            ^^^^^^^^^^^^^^^^^^^ Unexpected type argument for type `MyStruct` (expected 1,
   |                                got 2)

Guppy compilation failed due to 1 previous error
